various tweaks to try and add route params
